Enable sqlite native access